@@ -140,7 +140,7 @@ abstract class JToolBarHelper
 	 * @param	string	$href	URL of the href attribute.
 	 * @since	1.0
 	 */
-	public static function back($alt = 'Back', $href = 'javascript:history.back();')
+	public static function back($alt = 'JTOOLBAR_BACK', $href = 'javascript:history.back();')
 	{
 		$bar = JToolBar::getInstance('toolbar');
 		// Add a back button.
@@ -154,7 +154,7 @@ abstract class JToolBarHelper
 	 * @param	string	$alt		An override for the alt text.
 	 * @since	1.0
 	 */
-	public static function media_manager($directory = '', $alt = 'Upload')
+	public static function media_manager($directory = '', $alt = 'JTOOLBAR_UPLOAD')
 	{
 		$bar = JToolBar::getInstance('toolbar');
 		// Add an upload button.
@@ -168,7 +168,7 @@ abstract class JToolBarHelper
 	 * @param	string	$alt	An override for the alt text.
 	 * @since	1.0
 	 */
-	public static function makeDefault($task = 'default', $alt = 'Default')
+	public static function makeDefault($task = 'default', $alt = 'JTOOLBAR_DEFAULT')
 	{
 		$bar = JToolBar::getInstance('toolbar');
 		// Add a default button.
@@ -182,7 +182,7 @@ abstract class JToolBarHelper
 	 * @param	string	$alt	An override for the alt text.
 	 * @since	1.0
 	 */
-	public static function assign($task = 'assign', $alt = 'Assign')
+	public static function assign($task = 'assign', $alt = 'JTOOLBAR_ASSIGN')
 	{
 		$bar = JToolBar::getInstance('toolbar');
 		// Add an assign button.
@@ -196,7 +196,7 @@ abstract class JToolBarHelper
 	 * @param	string	$alt	An override for the alt text.
 	 * @since	1.0
 	 */
-	public static function addNew($task = 'add', $alt = 'New')
+	public static function addNew($task = 'add', $alt = 'JTOOLBAR_NEW')
 	{
 		$bar = JToolBar::getInstance('toolbar');
 		// Add a new button.
@@ -212,7 +212,7 @@ abstract class JToolBarHelper
 	 * @since	1.0
 	 * @deprecated
 	 */
-	public static function addNewX($task = 'add', $alt = 'New')
+	public static function addNewX($task = 'add', $alt = 'JTOOLBAR_NEW')
 	{
 		self::addNew($task, $alt);
 	}
@@ -224,7 +224,7 @@ abstract class JToolBarHelper
 	 * @param	string	$alt	An override for the alt text.
 	 * @since	1.0
 	 */
-	public static function publish($task = 'publish', $alt = 'Publish')
+	public static function publish($task = 'publish', $alt = 'JTOOLBAR_PUBLISH')
 	{
 		$bar = JToolBar::getInstance('toolbar');
 		// Add a publish button.
@@ -238,7 +238,7 @@ abstract class JToolBarHelper
 	 * @param	string	$alt	An override for the alt text.
 	 * @since	1.0
 	 */
-	public static function publishList($task = 'publish', $alt = 'Publish')
+	public static function publishList($task = 'publish', $alt = 'JTOOLBAR_PUBLISH')
 	{
 		$bar = JToolBar::getInstance('toolbar');
 		// Add a publish button (list).
@@ -252,7 +252,7 @@ abstract class JToolBarHelper
 	 * @param	string	$alt	An override for the alt text.
 	 * @since	1.0
 	 */
-	public static function unpublish($task = 'unpublish', $alt = 'Unpublish')
+	public static function unpublish($task = 'unpublish', $alt = 'JTOOLBAR_UNPUBLISH')
 	{
 		$bar = JToolBar::getInstance('toolbar');
 		// Add an unpublish button
@@ -266,7 +266,7 @@ abstract class JToolBarHelper
 	 * @param	string	$alt	An override for the alt text.
 	 * @since	1.0
 	 */
-	public static function unpublishList($task = 'unpublish', $alt = 'Unpublish')
+	public static function unpublishList($task = 'unpublish', $alt = 'JTOOLBAR_UNPUBLISH')
 	{
 		$bar = JToolBar::getInstance('toolbar');
 		// Add an unpublish button (list).
@@ -280,7 +280,7 @@ abstract class JToolBarHelper
 	 * @param	string	$alt	An override for the alt text.
 	 * @since	1.0
 	 */
-	public static function archiveList($task = 'archive', $alt = 'Archive')
+	public static function archiveList($task = 'archive', $alt = 'JTOOLBAR_ARCHIVE')
 	{
 		$bar = JToolBar::getInstance('toolbar');
 		// Add an archive button.
@@ -294,7 +294,7 @@ abstract class JToolBarHelper
 	 * @param	string	$alt	An override for the alt text.
 	 * @since	1.0
 	 */
-	public static function unarchiveList($task = 'unarchive', $alt = 'Unarchive')
+	public static function unarchiveList($task = 'unarchive', $alt = 'JTOOLBAR_UNARCHIVE')
 	{
 		$bar = JToolBar::getInstance('toolbar');
 		// Add an unarchive button (list).
@@ -308,7 +308,7 @@ abstract class JToolBarHelper
 	 * @param	string	$alt	An override for the alt text.
 	 * @since	1.0
 	 */
-	public static function editList($task = 'edit', $alt = 'Edit')
+	public static function editList($task = 'edit', $alt = 'JTOOLBAR_EDIT')
 	{
 		$bar = JToolBar::getInstance('toolbar');
 		// Add an edit button.
@@ -324,7 +324,7 @@ abstract class JToolBarHelper
 	 * @since	1.0
 	 * @deprecated
 	 */
-	public static function editListX($task = 'edit', $alt = 'Edit')
+	public static function editListX($task = 'edit', $alt = 'JTOOLBAR_EDIT')
 	{
 		self::editList($task, $alt);
 	}
@@ -336,7 +336,7 @@ abstract class JToolBarHelper
 	 * @param	string	$alt	An override for the alt text.
 	 * @since	1.0
 	 */
-	public static function editHtml($task = 'edit_source', $alt = 'EDIT_HTML')
+	public static function editHtml($task = 'edit_source', $alt = 'JTOOLBAR_EDIT_HTML')
 	{
 		$bar = JToolBar::getInstance('toolbar');
 		// Add an edit html button.
@@ -352,7 +352,7 @@ abstract class JToolBarHelper
 	 * @since	1.0
 	 * @deprecated
 	 */
-	public static function editHtmlX($task = 'edit_source', $alt = 'EDIT_HTML')
+	public static function editHtmlX($task = 'edit_source', $alt = 'JTOOLBAR_EDIT_HTML')
 	{
 		self::editHtml($task, $alt);
 	}
@@ -364,7 +364,7 @@ abstract class JToolBarHelper
 	 * @param	string	$alt	An override for the alt text.
 	 * @since	1.0
 	 */
-	public static function editCss($task = 'edit_css', $alt = 'EDIT_CSS')
+	public static function editCss($task = 'edit_css', $alt = 'JTOOLBAR_EDIT_CSS')
 	{
 		$bar = JToolBar::getInstance('toolbar');
 		// Add an edit css button (hide).
@@ -380,7 +380,7 @@ abstract class JToolBarHelper
 	 * @since	1.0
 	 * @deprecated
 	 */
-	public static function editCssX($task = 'edit_css', $alt = 'EDIT_CSS')
+	public static function editCssX($task = 'edit_css', $alt = 'JTOOLBAR_EDIT_CSS')
 	{
 		self::editCss($task, $alt);
 	}
@@ -393,7 +393,7 @@ abstract class JToolBarHelper
 	 * @param	string	$alt	An override for the alt text.
 	 * @since	1.0
 	 */
-	public static function deleteList($msg = '', $task = 'remove', $alt = 'Delete')
+	public static function deleteList($msg = '', $task = 'remove', $alt = 'JTOOLBAR_DELETE')
 	{
 		$bar = JToolBar::getInstance('toolbar');
 		// Add a delete button.
@@ -414,7 +414,7 @@ abstract class JToolBarHelper
 	 * @since	1.0
 	 * @deprecated
 	 */
-	public static function deleteListX($msg = '', $task = 'remove', $alt = 'Delete')
+	public static function deleteListX($msg = '', $task = 'remove', $alt = 'JTOOLBAR_DELETE')
 	{
 		self::deleteList($msg, $task, $alt);
 	}
@@ -427,7 +427,7 @@ abstract class JToolBarHelper
 	 * @param	bool	$check
 	 * @since	1.0
 	 */
-	public static function trash($task = 'remove', $alt = 'Trash', $check = true)
+	public static function trash($task = 'remove', $alt = 'JTOOLBAR_TRASH', $check = true)
 	{
 		$bar = JToolBar::getInstance('toolbar');
 		// Add a trash button.
@@ -442,7 +442,7 @@ abstract class JToolBarHelper
 	 * @param	string	$alt	An override for the alt text.
 	 * @since	1.0
 	 */
-	public static function apply($task = 'apply', $alt = 'Apply')
+	public static function apply($task = 'apply', $alt = 'JTOOLBAR_APPLY')
 	{
 		$bar = JToolBar::getInstance('toolbar');
 		// Add an apply button
@@ -457,7 +457,7 @@ abstract class JToolBarHelper
 	 * @param	string	$alt	An override for the alt text.
 	 * @since	1.0
 	 */
-	public static function save($task = 'save', $alt = 'Save')
+	public static function save($task = 'save', $alt = 'JTOOLBAR_SAVE')
 	{
 		$bar = JToolBar::getInstance('toolbar');
 		// Add a save button.
@@ -471,7 +471,7 @@ abstract class JToolBarHelper
 	 * @param	string	$alt	An override for the alt text.
 	 * @since	1.0
 	 */
-	public static function cancel($task = 'cancel', $alt = 'Cancel')
+	public static function cancel($task = 'cancel', $alt = 'JTOOLBAR_CANCEL')
 	{
 		$bar = JToolBar::getInstance('toolbar');
 		// Add a cancel button.
