@@ -1121,6 +1121,8 @@ JSELECT_ALLOW_DENY_GROUP="Allow or deny %s for users in the %s group"
 
 JTOOLBAR_APPLY="Save"
 JTOOLBAR_ARCHIVE="Archive"
+JTOOLBAR_ASSIGN="Assign"
+JTOOLBAR_BACK="Back"
 JTOOLBAR_CANCEL="Cancel"
 JTOOLBAR_CHECKIN="Check In"
 JTOOLBAR_CLOSE="Close"
@@ -1129,6 +1131,8 @@ JTOOLBAR_DELETE="Delete"
 JTOOLBAR_DISABLE="Disable"
 JTOOLBAR_DUPLICATE="Duplicate"
 JTOOLBAR_EDIT="Edit"
+JTOOLBAR_EDIT_CSS="Edit CSS"
+JTOOLBAR_EDIT_HTML="Edit HTML"
 JTOOLBAR_EMPTY_TRASH="Empty trash"
 JTOOLBAR_ENABLE="Enable"
 JTOOLBAR_EXPORT="Export"
@@ -1147,6 +1151,7 @@ JTOOLBAR_SAVE_AS_COPY="Save as Copy"
 JTOOLBAR_UNARCHIVE="Unarchive"
 JTOOLBAR_UNINSTALL="Uninstall"
 JTOOLBAR_UNPUBLISH="Unpublish"
+JTOOLBAR_UPLOAD="Upload"
 JTOOLBAR_TRASH="Trash"
 JTOOLBAR_REBUILD_SUCCESS="Successfully rebuilt"
 
